[gd_scene load_steps=18 format=3 uid="uid://5wv1gfwppcnf"]

[ext_resource type="Theme" uid="uid://cf1ayo3dckj67" path="res://source/client/gateway/ui/theme_navy.tres" id="1_sg1qr"]
[ext_resource type="Script" uid="uid://ch86ljq7iwgv8" path="res://source/client/gateway/gateway.gd" id="2_74q4y"]
[ext_resource type="Texture2D" uid="uid://cfihbj71a4y35" path="res://assets/sprites/gui/backgrounds/desert.png" id="3_1c3kr"]
[ext_resource type="Texture2D" uid="uid://cn5blfyqokda6" path="res://assets/sprites/gui/backgrounds/fairy_forest.png" id="4_uvr2v"]
[ext_resource type="FontFile" uid="uid://cehc3gujked8x" path="res://assets/fonts/Cinzel/static/Cinzel-Bold.ttf" id="5_opc3y"]
[ext_resource type="FontFile" uid="uid://cr1d4ugttxggp" path="res://assets/fonts/Atkinson_Hyperlegible/AtkinsonHyperlegible-Bold.ttf" id="6_tnybn"]
[ext_resource type="StyleBox" uid="uid://bi8r7kxlh83no" path="res://source/client/gateway/ui/gradient_button.tres" id="7_waovh"]
[ext_resource type="SpriteFrames" uid="uid://dkeeft051qhl3" path="res://source/common/gameplay/characters/sprite_frames/rogue.tres" id="8_afkjb"]
[ext_resource type="Script" uid="uid://q5rsjtg6nsto" path="res://source/client/gateway/ui/popup_panel.gd" id="9_4rdug"]
[ext_resource type="AudioStream" uid="uid://xxr4otrq1cg0" path="res://assets/audio/music/ekonia-main-theme.wav" id="10_q1aoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q35d6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q35d6"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_1gybq"]
offsets = PackedFloat32Array(0, 0.25, 1)
colors = PackedColorArray(0, 0, 0, 0.1, 0.23, 0.23, 0.23, 0.4, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rk5g7"]
gradient = SubResource("Gradient_1gybq")
fill_from = Vector2(0, 0.465812)
fill_to = Vector2(1, 0.491453)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fnfxe"]
color = Color(0.2317, 0.427629, 0.468198, 0.84)
thickness = 3

[sub_resource type="LabelSettings" id="LabelSettings_rky0m"]
font = ExtResource("6_tnybn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfj0q"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.692304, 0.737968, 0.839943, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 12
shadow_offset = Vector2(0, 4)

[node name="Gateway" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sg1qr")
script = ExtResource("2_74q4y")

[node name="Desert" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -300)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_1c3kr")
centered = false

[node name="FairyForest" type="Sprite2D" parent="."]
position = Vector2(0, -300)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_uvr2v")
centered = false

[node name="BackgroundRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129559, 0.129558, 0.35)

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="MainPanel"]
visible = false
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Welcome"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="LoginButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Login"

[node name="CreateAccountButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Create Account"

[node name="GuestButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Play as Guest"

[node name="LoginPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -166.5
offset_right = 280.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Login"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="LoginPanel/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Account name"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your account name here"

[node name="VBoxContainer2" type="VBoxContainer" parent="LoginPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Password"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password here"

[node name="LoginButton" type="Button" parent="LoginPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Login"

[node name="CreateAccountPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -211.5
offset_right = 280.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Create Account"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CreateAccountPanel/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Account name"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your account name here"

[node name="VBoxContainer2" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Password"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password here"

[node name="VBoxContainer3" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Password Repeat"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password again here"

[node name="CreateAccountButton" type="Button" parent="CreateAccountPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Create Account"

[node name="WorldSelection" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="WorldSelection"]
visible = false
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="WorldSelection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="WorldSelection/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "World Selection"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="WorldSelection/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="HBoxContainer" type="HBoxContainer" parent="WorldSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Button" type="Button" parent="WorldSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida
kkkkkkkkkkkkkkkkkkkkkkkkkk
Rules:
Vladi
gz

Mondial"
clip_text = true

[node name="Button2" type="Button" parent="WorldSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="Button3" type="Button" parent="WorldSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="CharacterSelection" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="CharacterSelection"]
visible = false
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterSelection/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Character Selection"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterSelection/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Button" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="Button2" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="Button3" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="CharacterCreation" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -249.0
offset_right = 350.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="CharacterCreation"]
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Character Creation"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Starting class"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="CreateButton" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Knight"

[node name="CreateButton2" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Rogue"

[node name="CreateButton3" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Mage"

[node name="VBoxContainer2" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Preview"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="CenterContainer" type="CenterContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(260, 130)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer/Control"]
position = Vector2(0, -130)
scale = Vector2(4, 4)
sprite_frames = ExtResource("8_afkjb")
animation = &"run"
frame_progress = 0.937406
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10

[node name="LineEdit" type="LineEdit" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Character name"

[node name="Button" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Random"

[node name="VBoxContainer3" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Description"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Wizard
A master of elemental forces, commanding powerful spells to devastate enemies or support allies."

[node name="CreateButton" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(210, 56)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "Create"

[node name="PopupPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_4rdug")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Welcome"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_fnfxe")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "
"

[node name="GuestButton" type="Button" parent="PopupPanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = ExtResource("7_waovh")
text = "OK"

[node name="SwapButton" type="Button" parent="."]
layout_mode = 0
offset_left = 915.0
offset_top = 492.0
offset_right = 955.0
offset_bottom = 532.0

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -52.0
offset_right = 104.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_tnybn")
text = "Back"

[node name="ConnectionInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -54.0
offset_right = 140.0
offset_bottom = -9.0
grow_vertical = 0
text = "Not connected yet
"
horizontal_alignment = 3
vertical_alignment = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q1aoo")
volume_db = -12.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
accept_gzip = false
timeout = 8.0

[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/GuestButton" to="." method="_on_guest_button_pressed"]
[connection signal="pressed" from="LoginPanel/VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_login_button_pressed"]
[connection signal="pressed" from="CreateAccountPanel/VBoxContainer/VBoxContainer/CreateAccountButton" to="." method="create_account"]
[connection signal="pressed" from="CharacterCreation/VBoxContainer/VBoxContainer/CreateButton" to="." method="_on_create_character_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
